--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
         <div class="jumbotron">
           <h1 class="display-3">EvidenZ BCDT Metrics</h1>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <p class="lead">Stats and facts about BCDT token.</p>
 <!--           <hr class="my-4">
           <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
         </div>     
@@ -55,8 +55,8 @@
           <div class="card border-primary mb-3" style="">
             <div class="card-header">BCDT Repartition</div>
             <div class="card-body">
-              <h4 class="card-title">Primary card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h4 class="card-title d-none">Primary card title</h4>
+              <p class="card-text d-none">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <div id="splitpie"></div>
             </div>
           </div>
